# ts-nextjs-route-handlers-grpc-gen

./: .bazelrc  .eslintrc.json  .gitignore  BUILD.bazel  CODEOWNERS  MODULE.bazel  README.md  package.json  pnpm-lock.yaml  tsconfig.json
.github/workflows/: bazel-test.yaml  trunk-check.yaml
.trunk/: trunk.yaml
src/: BUILD  hello.ts
toolchain/ts/: BUILD  defs.bzl
